--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles.css">
     <style>
         header {
-            background: url('drawing-7821641_1920.jpg') no-repeat center center/cover;
+           header {
+    background: url('https://boris-not-johnson.github.io/oxanadesigner/images/drawing-7821641_1920.jpg') no-repeat center center/cover;
             height: 300px;
             display: flex;
             align-items: center;
